packages/babel-parser/test/fixtures/experimental/import-assertions-with-keyword/valid-syntax-export-with-no-type-assertion/input.js
export { default } from "foo.json" with { lazy: "true" };
