packages/babel-parser/test/fixtures/experimental/import-assertions-with-keyword/invalid-syntax-export-without-assertions-identifier/input.js
export { x } from "foo" with;
